--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@
 	width:100%;
 	height:100%;
 	overflow: hide;
+	display: block;
 }
 .popupInfo {
 	margin-left:10px;
@@ -67,6 +68,27 @@
 	margin-top:4px;/** Hack */
 }
 
+#optionsExtensions {
+	margin:0;
+}
+.inlineHeader {
+	margin-top:10px;
+	margin-bottom:10px;
+}
+.inlineHeader h4 {
+	display:inline;
+}
+.codeEditor {
+	width:100%;
+}
+.codeEditor textarea {
+	display:block;
+	margin:0;
+	width:100%;
+	box-sizing: border-box;
+	height:400px;
+}
+
 /** Bottom bar */
 .fixedBottomBar {
 	margin:0;padding:0;
@@ -100,6 +122,7 @@
 	margin-left:16px;
 }
 .viewLogOutput input {
+	background: none !important;
 	border:none !important;
 	margin:0;
 	-webkit-box-shadow:none;
