--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,17 @@
 .dontShowAtStart {
 	display: none;
 }
+.unselectable {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.overflowWidget {
+	overflow: auto;
+}
 
 #mainContainer {
 	padding-left:4px;
@@ -21,7 +32,7 @@
 .viewCanvas {
 	width:100%;
 	height:100%;
-	overflow: hide;
+	overflow: hidden;
 	display: block;
 }
 .popupInfo {
@@ -70,7 +81,22 @@
 
 #optionsExtensions {
 	margin:0;
+	max-height:200px;
+	width:100%;
 }
+#optionsExtensions li h5 {
+	margin:0;
+}
+#optionsExtensions li div {
+	overflow: auto;
+}
+#optionsExtensions li span {
+	margin-top:5px;
+	vertical-align:middle;
+	display:block;
+	float:left;
+}
+
 .inlineHeader {
 	margin-top:10px;
 	margin-bottom:10px;
